# chess

./: .clang-format  .clang-tidy  .codecov.yml  .gitignore  BUILD_WINDOWS.md  CI_CD_INDEX.md  CI_CD_SUMMARY.md  CMakeLists.txt  CONTRIBUTING.md  DEVELOPMENT_TOOLS.md  HOW_TO_RUN.md  LICENSE  NEXT_STEPS.md  QUICK_CI_SETUP.md  QUICK_START.md  README.md  TESTING.md  TOOLS_INDEX.md  TOOLS_QUICK_REFERENCE.md  debug_perft.cpp  main.cpp  main_mt.cpp
.github/: CI_CD_GUIDE.md  README.md  WORKFLOWS.md
.github/workflows/: ci.yml  release.yml
bench/: bench.cpp  bench.h  positions.txt
board/: bitboard.h  position.cpp  position.h  types.h
book/: polyglot.cpp  polyglot.h
docs/: BOOK_AND_TABLEBASE_GUIDE.md  OPENING_BOOKS.md  TABLEBASES.md
epd/: epd_parser.cpp  epd_parser.h  epd_runner.cpp  epd_runner.h
eval/: EVALUATION_GUIDE.md  QUICK_START.md  README.md  TUNING_GUIDE.md  classic_eval.cpp  classic_eval.h  evaluator.h  tuner.cpp  tuner.h
fuzz/: README.md  build_fuzzers.sh  fuzz_fen.cpp  fuzz_movegen.cpp
movegen/: attacks.cpp  attacks.h  movegen.cpp  movegen.h
nnue/: NNUE_FORMAT.md  nnue_converter.cpp  nnue_eval.cpp  nnue_eval.h  nnue_loader.cpp  nnue_loader.h  stockfish_nnue.cpp  stockfish_nnue.h
scripts/: README.md  benchmark.bat  benchmark.py  benchmark.sh  compare_benchmarks.py  setup_scripts.sh  test_ci_locally.sh  verify_ci_setup.sh
search/: move_pool.h  search.cpp  search.h  thread_pool.cpp  thread_pool.h  tt.cpp  tt.h
simd/: simd.cpp  simd.h
tablebase/: syzygy.cpp  syzygy.h
tablebase/fathom/: tbprobe.h
tests/: QUICK_START.md  README.md  TEST_RESULTS.md  perft_divide.cpp  test_attacks.cpp  test_bitboard.cpp  test_book.cpp  test_eval.cpp  test_movegen.cpp  test_perft.cpp  test_position.cpp  test_search.cpp  test_tablebase.cpp  test_uci.cpp
tools/: README.md  analyze.py  make_book.py  play_games.py
training/: README.md  TRAINING_GUIDE.md  USAGE.md  export_weights.py  generate_synthetic_data.py  model.pth  prepare_data.py  quick_start.sh  requirements.txt  train_nnue.py
uci/: uci.cpp  uci.h  uci_new.cpp  uci_new.h
